<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Setup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:text="@string/setup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="20sp"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_enter_name"/>
            <EditText android:id="@+id/setup_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/setup_usetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Use Tor"
            android:layout_gravity="center_horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            />

        <Button
            android:id="@+id/setup_button_fillinname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_setup_doitforme"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:onClick="fillInName"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_setup_ok"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_gravity="center_horizontal"
            android:onClick="performSetup"/>

    </LinearLayout >
</LinearLayout >
